--- a/assets/css/flowchart/graph.css
+++ b/assets/css/flowchart/graph.css
@@ -10,17 +10,20 @@ CSS For ui-flowchart [left pane graph area]
 	stroke: #aaaaaa;
 	stroke-width: 1;
 	border-radius: 0 !important;
+	cursor: default !important;
 }
 
 .mouseover-node-rect {
 	stroke: #777777;
 	stroke-width: 1;
+	cursor: default !important;
 }
 
 .selected-node-rect {
     fill:white;
 	stroke: #3F98F3;
 	stroke-width: 1;
+	cursor: default !important;
 }
 
 .disabled-node-rect {
@@ -28,6 +31,7 @@ CSS For ui-flowchart [left pane graph area]
 	stroke: #aaaaaa;
 	border-radius: 0 !important;
 	stroke-width: 1;
+	cursor: default !important;
 }
 
 .mouseover-disabled-node-rect {
@@ -35,6 +39,7 @@ CSS For ui-flowchart [left pane graph area]
 	stroke: #777777;
 	stroke-width: 1;
 	border-radius: 0 !important;
+	cursor: default !important;
 }
 
 .selected-disabled-node-rect {
@@ -42,12 +47,14 @@ CSS For ui-flowchart [left pane graph area]
 	stroke: #3F98F3;
 	stroke-width: 1;
 	border-radius: 0 !important;
+	cursor: default !important;
 }
 
 .connector-circle {
     fill: white;
     stroke: #777777;
     stroke-width: 1;
+	cursor: default !important;
 }
 
 .func-connector-circle {
@@ -55,6 +62,7 @@ CSS For ui-flowchart [left pane graph area]
 	stroke: #777777;
 	stroke-width: 1;
 	stroke-dasharray:5,1;
+	cursor: default !important;
 }
 
 .mouseover-func-connector-circle {
@@ -62,6 +70,7 @@ CSS For ui-flowchart [left pane graph area]
 	stroke: #777777;
 	stroke-width: 2;
 	stroke-dasharray:5,1;
+	cursor: default !important;
 }
 
 .selected-func-connector-circle {
@@ -69,6 +78,7 @@ CSS For ui-flowchart [left pane graph area]
 	stroke: red;
 	stroke-width: 1;
 	stroke-dasharray:5,1;
+	cursor: default !important;
 }
 
 
@@ -76,16 +86,19 @@ CSS For ui-flowchart [left pane graph area]
 	 fill: white;
 	 stroke: #777777;
 	 stroke-width: 2;
+	cursor: default !important;
  }
 .connector-text{
 	visibility: hidden;
 	font-size: 8px;
 	font-weight: 300;
+	cursor: default !important;
 }
 .connector:hover > .connector-text {
 	visibility: visible;
 	font-size: 8px;
 	font-weight: 300;
+	cursor: default !important;
 }
 
 
@@ -93,9 +106,8 @@ CSS For ui-flowchart [left pane graph area]
 	fill: white;
 	stroke: red;
 	stroke-width: 1;
+	cursor: default !important;
 }
-
-
 
 
 /*
@@ -103,12 +115,14 @@ Style for connections.
 */
 
 .connection {
+	cursor: default !important;
 }
 
 .connection-line {
 	stroke: #555555;
 	stroke-width: 1;
 	fill: transparent;
+	cursor: default !important;
 }
 
 .func-connection-line {
@@ -116,13 +130,14 @@ Style for connections.
 	stroke-width: 1;
 	fill: transparent;
 	stroke-dasharray:3,1;
-
+	cursor: default !important;
 }
 
 .mouseover-connection-line {
 	stroke: gray;
 	stroke-width: 2;
 	fill: transparent;
+	cursor: default !important;
 }
 
 .mouseover-func-connection-line {
@@ -130,12 +145,14 @@ Style for connections.
 	stroke-width: 2;
 	fill: transparent;
 	stroke-dasharray:3,1;
+	cursor: default !important;
 }
 
 .selected-connection-line {
 	stroke: red;
 	stroke-width: 2;
 	fill: transparent;
+	cursor: default !important;
 }
 
 .selected-func-connection-line {
@@ -143,18 +160,22 @@ Style for connections.
 	stroke-width: 2;
 	fill: transparent;
 	stroke-dasharray:3,1;
+	cursor: default !important;
 }
 
 .connection-endpoint {
 	fill: #555555;
+	cursor: default !important;
 }
 
 .selected-connection-endpoint {
 	fill: red;
+	cursor: default !important;
 }	
 
 .mouseover-connection-endpoint {
 	fill: gray;
+	cursor: default !important;
 }
 
 /*
@@ -163,16 +184,19 @@ Style for the connection being dragged out.
 
 .dragging-connection {
 	pointer-events: none;
+	cursor: default !important;
 }
 
 .dragging-connection-line {
 	stroke: gray;
 	stroke-width: 2;
 	fill: transparent;
+	cursor: default !important;
 }	
 
 .dragging-connection-endpoint {
 	fill: gray;
+	cursor: default !important;
 }
 
 /*
@@ -194,6 +218,7 @@ Drag selection rectangle.
 	stroke-dasharray:3,3;
 	fill: transparent;
 	border-radius: 0 !important;
+	cursor: default !important;
 }
 
 /*canvas background*/
@@ -206,4 +231,5 @@ Drag selection rectangle.
 
 #node-creator{
 	width:180px;
+	cursor: default !important;
 }
